manifest/DNU/istio-envoy-filter.yaml
# Do not use this file, it's just an example of how to create an EnvoyFilter to enable CORS in Istio
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cors-filter
  namespace: default # replace with your actual namespace
spec:
  workloadSelector:
    labels:
      app: django
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: MERGE
        value:
          name: envoy.cors
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors"
            allow_origin:
              - "*" # replace with your actual origin if needed
            allow_methods:
              - "GET, HEAD, POST, PUT, DELETE, CONNECT, OPTIONS, TRACE, PATCH"
            allow_headers:
              - "Content-Type, Authorization, X-Requested-With, Accept, Origin" # replace with your actual headers if needed
